--- a/css/style.css
+++ b/css/style.css
@@ -1,134 +1,103 @@
-body{
-width: 1440px;
-left: 0px;
-position: absolute;
-margin: 0;
-padding: 0;
-
-
+body {
+  width: 1440px;
+  left: 0px;
+  position: absolute;
+  margin: 0;
+  padding: 0;
 }
 
-header{
-    background-color: #E6E6E6;
-    display: flex;
-    justify-content: center;
-    
-   
-
+header {
+  background-color: #E6E6E6;
+  display: flex;
+  justify-content: center;
 }
-.header img {
-        padding: 1rem 0 1rem 0;
-        align-items: center;
-        justify-content: center;
-
+header img {
+  padding: 1rem 0 1rem 0;
+  align-items: center;
+  justify-content: center;
 }
 
-
-
-h1{
-    text-align: center;
-    background-color: #C4C4C4;
-    color: #005677;
-    text-transform: uppercase;
-    font-family: 'Times New Roman' ;
-    word-spacing: 24px;    
-    font-size: 25px;
-    word-spacing: 28px;
-    letter-spacing: 20px;
-    line-height: 60px;
-    font-style: normal;
-    margin-top: 0%;
-    
-}
-.datos{
-    margin-top: 150px;
-    
-}
-h2{
-    background-color: #C4C4C4;
-    text-transform: uppercase;
-    font-family: 'Times New Roman' ;
-    line-height: 38px;
-    position: relative;
-    font-size: 20px;
-    color:#005677;
-    letter-spacing: 7px;
-    font-style: normal; 
-    display: grid;
-    
-
+.datos {
+  margin-top: 150px;
 }
 
-
-
-.form{
-    font-size: 15px;
-    font-family: 'Times New Roman';
-    font-weight: 400;
-    line-height: 19.7px;
-    font-weight: lighter;
-    
-
+h2 {
+  background-color: #C4C4C4;
+  text-transform: uppercase;
+  font-family: "Times New Roman";
+  line-height: 38px;
+  position: relative;
+  font-size: 20px;
+  color: #005677;
+  letter-spacing: 7px;
+  font-style: normal;
+  display: grid;
 }
 
-
-
-.form  dt span  {
-    font-size: 15px;
-    font-family: 'Times New Roman';
-    font-weight: 400;
-    font-weight: bold;
-    font-style: normal;
-    position: relative;top: 0px; left: 25px; 
-
+.form {
+  font-size: 15px;
+  font-family: "Times New Roman";
+  font-weight: 400;
+  line-height: 19.7px;
+  font-weight: lighter;
+}
+.form dt span {
+  font-size: 15px;
+  font-family: "Times New Roman";
+  font-weight: 400;
+  font-weight: bold;
+  font-style: normal;
+  position: relative;
+  top: 0px;
+  left: 25px;
 }
 
-
-.informacion ul li{
-    font-size: 15px;
-    font-family: 'Times New Roman';
-    font-weight: 400;
-    font-style: normal;
-}
-.informacion ul li span{
-    font-size: 15px;
-    font-family: 'Times New Roman';
-    font-weight: 400;
-    font-weight: bold;
-    font-style: italic;
-    
-
+h1 {
+  text-align: center;
+  background-color: #C4C4C4;
+  color: #005677;
+  text-transform: uppercase;
+  font-family: "Times New Roman";
+  word-spacing: 24px;
+  font-size: 25px;
+  word-spacing: 28px;
+  letter-spacing: 20px;
+  line-height: 60px;
+  font-style: normal;
+  margin-top: 0%;
 }
 
-p{
-    background-color: #005677;
-    text-align: center;
-    font-size: 20px;
-    font-family: "Times New Roman";
+.informacion ul li {
+  font-size: 15px;
+  font-family: "Times New Roman";
+  font-weight: 400;
+  font-style: normal;
+}
+.informacion ul li span {
+  font-size: 15px;
+  font-family: "Times New Roman";
+  font-weight: 400;
+  font-weight: bold;
+  font-style: italic;
 }
 
 footer {
-position: absolute;
-width: 1440px;
-height: 20px;
-left: 0px;
-top: 987px;
-
-
-
+  position: absolute;
+  width: 1440px;
+  height: 20px;
+  left: 0px;
+  top: 987px;
 }
-
-p{
-    text-align: center;
-    line-height: 50px;
-    font-family: "Times New Roman";
-    font-style: normal;
-    color: #FFFFFF;
-    font-size: 20px;
-
+footer p {
+  text-align: center;
+  line-height: 50px;
+  font-family: "Times New Roman";
+  font-style: normal;
+  color: #FFFFFF;
+  font-size: 20px;
+  background-color: #005677;
 }
-
 footer img {
-    position: relative;
-    bottom: -3px;
-  }
+  position: relative;
+  bottom: -3px;
+}/*# sourceMappingURL=style.css.map */
